Agrega branch develop

--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-  "apikey": ""
+  "apikey": "",
+  "DB_host": "localhost",
+  "DB_user": "root",
+  "DB_password": "",
+  "DB_database": "zocobot"
 }
