--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "CrazzyRat",
   "license": "ISC",
   "dependencies": {
+    "mysql": "^2.15.0",
     "node-telegram-bot-api": "^0.30.0",
     "request": "^2.85.0"
   }
